--- a/index.html
+++ b/index.html
@@ -14,69 +14,80 @@
 	</head>
 
 	<body>
-		<header class="links">
-			<a class="logo" href="index.html"
-				><span class="logo-second-part">WEB</span>STUDIO</a
+		<header class="bottom-line">
+			<div class="flex-container container">
+			<a class="logo-dark" href="index.html"
+				><span class="logo-part">WEB</span>STUDIO</a
 			>
 
-			<nav class="nav-button">
-				<ul>
-					<li><a href="index.html">Studio</a></li>
-					<li><a href="portfolio.html">Portfolio</a></li>
-					<li><a href="index.html">Contact</a></li>
+			<nav>
+					<ul class="flex-nav">
+					<li><a class="link" href="index.html">Studio</a></li>
+					<li><a class="link" href="portfolio.html">Portfolio</a></li>
+					<li><a class="link" href="index.html">Contact</a></li>
 				</ul>
 			</nav>
-			<address class="address-info">
-				<a href="mailto:info@devstudio.com">info@devstudio.com</a>
-				<a href="tel:+11(000)1111111">+11 (000) 111-11-11</a>
+
+			
+			<address>
+				<div class="flex-adress">
+				<a class="link link-color" href="mailto:info@devstudio.com">info@devstudio.com</a>
+				<a class="link link-color" href="tel:+11(000)1111111">+11 (000) 111-11-11</a>
 			</address>
+		</div>
+		</div>
 		</header>
+
 		<main>
-			<section class="main-section">
-				<h1 class="main-section-title">
+			<section class="background">
+			<div class="container-black">
+			
+				<h1 class="text-content">
 					Effective Solutions for Your Business
 				</h1>
-				<button class="main-button" type="button">Order Service</button>
+				<button class="order-service" type="button">Order Service</button>
+			</div>
 			</section>
 
-			<section class="new-section">
-				<ul>
-					<li>
-						<h3 class="new-section">Strategy</h3>
-						<p class="description">
+			<section>
+				<div class="container">
+				<ul class="card-set">
+					<li class="item">
+						<h3 class="title-style">Strategy</h3>
+						<p class="text-style">
 							Our goal is to identify the business problem to walk away with the
 							perfect and creative solution.
 						</p>
 					</li>
-					<li>
-						<h3 class="new-section">Punctuality</h3>
-						<p class="description">
+					<li class="item">
+						<h3 class="title-style">Punctuality</h3>
+						<p class="text-style">
 							Bring the key message to the brand's audience for the best price
 							within the shortest possible time.
 						</p>
 					</li>
 
-					<li>
-						<h3 class="new-section">Diligence</h3>
-						<p class="description">
+					<li class="item">
+						<h3 class="title-style">Diligence</h3>
+						<p class="text-style">
 							Research and confirm brands that present the strongest digital
 							growth opportunities and minimize risk.
 						</p>
 					</li>
 
-					<li>
-						<h3 class="new-section">Technologies</h3>
-						<p class="description">
+					<li class="item">
+						<h3 class="title-style">Technologies</h3>
+						<p class="text-style">
 							Design practice focused on digital experiences. We bring forth a
 							deep passion for problem-solving.
 						</p>
 					</li>
 				</ul>
-			</section>
-
-			<section>
-				<h2 class="third-section">What are we doing</h2>
-				<ul>
+			
+		
+				<div class="container">
+				<h2 class="specialty">What Are We Doing</h2>
+				<ul class="specialty-pics">
 					<li>
 						<img
 							src="./images/Rectangle-71.jpg"
@@ -99,63 +110,72 @@
 							height="300" />
 					</li>
 				</ul>
+			</div>
+				</div>
 			</section>
 
-			<section class="team-section">
-				<h2 class="team-member-list">Our Team</h2>
-				<ul>
-					<li>
+			<section class="grey">
+				
+				<h2 class="specialty">Our Team</h2>
+				<div class="container">
+			
+					<ul class="card-set">
+					<li class="item frame">
 						<img
 							src="./images/img.jpg"
 							alt="man in shirt with dark beard"
 							width="264"
 							height="260" />
 
-						<h3 class="team-name">Mark Guerrero</h3>
-						<p class="team-name-description">Product Designer</p>
+						<h4 class="name">Mark Guerrero</h4>
+						<p class="position">Product Designer</p>
 					</li>
-					<li>
+					<li class="item frame">
 						<img
 							src="./images/img-5.jpg"
 							alt="smiling young man in blue shirt"
 							width="264"
 							height="260" />
 
-						<h3 class="team-name">Tom Ford</h3>
-						<p class="team-name-description">Frontend Developer</p>
+						<h4 class="name">Tom Ford</h4>
+						<p class="position">Frontend Developer</p>
 					</li>
-					<li>
+					<li class="item frame">
 						<img
 							src="./images/img-3.jpg"
 							alt="woman in pink sweater"
 							width="264"
 							height="260" />
 
-						<h3 class="team-name">Camila Garcia</h3>
-						<p class="team-name-description">Marketing</p>
+						<h4 class="name">Camila Garcia</h4>
+						<p class="position">Marketing</p>
 					</li>
-					<li>
+					<li class="item frame">
 						<img
 							src="./images/img-4.jpg"
 							alt="man in gray T-shirt "
 							width="264"
 							height="260" />
 
-						<h3 class="team-name">Daniel Wilson</h3>
-						<p class="team-name-description">UI Designer</p>
+						<h4 class="name">Daniel Wilson</h4>
+						<p class="position">UI Designer</p>
 					</li>
 				</ul>
+			</div>
+				
 			</section>
 		</main>
 
-		<footer class="footer-background">
-			<a class="logo-footer" href="index.html"
-				><span class="logo-footer-color">WEB</span>STUDIO</a
+		<footer>
+			<div class="background-bottom">
+			<a class="logo-light" href="index.html"
+				><span class="logo-part">WEB</span>STUDIO</a
 			>
-			<p class="footer-text">
+			<p class="address-style">
 				Increase the flow of customers and sales for your business with digital
 				marketing & growth solutions.
 			</p>
+		</div>
 		</footer>
 	</body>
 </html>
