--- a/portfolio.html
+++ b/portfolio.html
@@ -14,45 +14,50 @@
 	</head>
 
 	<body>
-		<header class="links">
-			<header class="links">
-			<a class="logo" href="index.html"
-				><span class="logo-second-part">WEB</span>STUDIO</a
+		<header class="bottom-line">
+			<div class="flex-container container header-line">
+			<a class="logo-dark" href="index.html"
+				><span class="logo-part">WEB</span>STUDIO</a
 			>
 
-			<nav class="nav-button">
-				<ul>
-					<li><a href="index.html">Studio</a></li>
-					<li><a href="portfolio.html">Portfolio</a></li>
-					<li><a href="index.html">Contact</a></li>
+			<nav>
+				<ul class="flex-nav">
+					<li><a class="link" href="index.html">Studio</a></li>
+					<li><a class="link" href="portfolio.html">Portfolio</a></li>
+					<li><a class="link" href="index.html">Contact</a></li>
 				</ul>
 			</nav>
-			<address class="address-info">
-				<a href="mailto:info@devstudio.com">info@devstudio.com</a>
-				<a href="tel:+11(000)1111111">+11 (000) 111-11-11</a>
+			<address>
+				<div class="flex-adress">
+				<a class="link link-color" href="mailto:info@devstudio.com">info@devstudio.com</a>
+				<a class="link link-color" href="tel:+11(000)1111111">+11 (000) 111-11-11</a>
 			</address>
+			</div>
+		</div>
 		</header>
 		<main>
-            <section>
+            <section class="container section">
                 <h1> </h1>
-			<ul>
-				<li class="btn-color"><button class="filter-button" type="button">All</button></li>
-				<li><button class="filter-button" type="button">Web Site</button></li>
-				<li><button class="filter-button" type="button">App</button></li>
-				<li><button class="filter-button" type="button">Design</button></li>
-				<li><button class="filter-button" type="button">Marketing</button></li>
+			<ul class="container menu">
+				<li class="button-item"><button class="button-design" type="button">All</button></li>
+				<li class="button-item"><button class="button-design" type="button">Web Site</button></li>
+				<li class="button-item"><button class="button-design" type="button">App</button></li>
+				<li class="button-item"><button class="button-design" type="button">Design</button></li>
+				<li class="button-item"><button class="button-design" type="button">Marketing</button></li>
 			</ul>
-        </section>
-        <section>
-			<ul>
+     
+			<div class="container">
+			<ul class="menu-set">
 				<li>
 					<img
 						src="./images/img-1-1.jpg"
 						alt="screenshots of Banking App Interface Concept"
 						width="360"
 						height="300" />
-					<h3 class="new-section">Banking App Interface Concept</h3>
-					<p class="description">App</p>
+						<div class="bottom-frame">
+					<h3 class="project-name">Banking App Interface Concept</h3>
+					<p class="project-type">App</p>
+				</div>
 				</li>
 				<li>
 					<img
@@ -60,8 +65,10 @@
 						alt="A phone that scans the QR code"
 						width="360"
 						height="300" />
-					<h3 class="new-section">Cashless Payment</h3>
-					<p class="description">Marketing</p>
+						<div class="bottom-frame">
+					<h3 class="project-name">Cashless Payment</h3>
+					<p class="project-type">Marketing</p>
+				</div>
 				</li>
 				
 				<li>
@@ -70,8 +77,10 @@
 						alt="Meditation app advertising on laptop and phone screen "
 						width="360"
 						height="300" />
-					<h3 class="new-section">Meditation App</h3>
-					<p class="description">App</p>
+						<div class="bottom-frame">
+					<h3 class="project-name">Meditation App</h3>
+					<p class="project-type">App</p>
+				</div>
 				</li>
 
 				<li>
@@ -80,8 +89,10 @@
 						alt="photo of the interior of the car with the driver"
 						width="360"
 						height="300" />
-					<h3 class="new-section">Taxi Service</h3>
-					<p class="description">Marketing</p>
+						<div class="bottom-frame">
+					<h3 class="project-name">Taxi Service</h3>
+					<p class="project-type">Marketing</p>
+				</div>
 				</li>
 
 				<li>
@@ -90,8 +101,10 @@
 						alt="graphics showing different wallpapers for phone with moon theme"
 						width="360"
 						height="300" />
-					<h3 class="new-section">Screen Illustrations</h3>
-					<p class="description">Design</p>
+						<div class="bottom-frame">
+					<h3 class="project-name">Screen Illustrations</h3>
+					<p class="project-type">Design</p>
+				</div>
 				</li>
 
 				<li>
@@ -100,8 +113,10 @@
 						alt="girl in orange sweater"
 						width="360"
 						height="300" />
-					<h3 class="new-section">Online Courses</h3>
+						<div class="bottom-frame">
+					<h3 class="project-name">Online Courses</h3>
 					<p class="description">Marketing</p>
+				</div>
 				</li>
 
 				<li>
@@ -110,8 +125,10 @@
 						alt="graphics showing various Instagram Stories Concept"
 						width="360"
 						height="300" />
-					<h3 class="new-section">Instagram Stories Concept</h3>
-					<p class="description">Design</p>
+						<div class="bottom-frame">
+					<h3 class="project-name">Instagram Stories Concept</h3>
+					<p class="project-type">Design</p>
+				</div>
 				</li>
 
 				<li>
@@ -120,8 +137,10 @@
 						alt="woman with shopping bag"
 						width="360"
 						height="300" />
-					<h3 class="new-section">Organic Food</h3>
-					<p class="description">Web Site</p>
+						<div class="bottom-frame">
+					<h3 class="project-name">Organic Food</h3>
+					<p class="project-type">Web Site</p>
+				</div>
 				</li>
 
 				<li>
@@ -130,20 +149,25 @@
 						alt="barista creating a pattern on coffee "
 						width="360"
 						height="300" />
-					<h3 class="new-section">Fresh Coffee</h3>
-					<p class="description">Web Site</p>
+						<div class="bottom-frame">
+					<h3 class="project-name">Fresh Coffee</h3>
+					<p class="project-type">Web Site</p>
+				</div>
 				</li>
 			</ul>
+		</div>
         </section>
 		</main>
-		<footer class="footer-background">
-			<a class="logo-footer" href="index.html"
-				><span class="logo-footer-color">WEB</span>STUDIO</a
+		<footer>
+			<div class="background-bottom">
+			<a class="logo-light" href="index.html"
+				><span class="logo-part">WEB</span>STUDIO</a
 			>
-			<p class="footer-text">
+			<p class="address-style">
 				Increase the flow of customers and sales for your business with digital
 				marketing & growth solutions.
 			</p>
+		</div>
 		</footer>
 	</body>
 </html>
