homework first try

--- a/portfolio.html
+++ b/portfolio.html
@@ -14,160 +14,175 @@
 	</head>
 
 	<body>
-		<header class="bottom-line">
-			<div class="flex-container container header-line">
-			<a class="logo-dark" href="index.html"
-				><span class="logo-part">WEB</span>STUDIO</a
-			>
+		<header class="links">
+			<div class="flex-container container">
+				<a class="logo-second-part" href="index.html"
+					><span class="logo">WEB</span>STUDIO</a
+				>
 
-			<nav>
-				<ul class="flex-nav">
-					<li><a class="link" href="index.html">Studio</a></li>
-					<li><a class="link" href="portfolio.html">Portfolio</a></li>
-					<li><a class="link" href="index.html">Contact</a></li>
-				</ul>
-			</nav>
-			<address>
-				<div class="flex-adress">
-				<a class="link link-color" href="mailto:info@devstudio.com">info@devstudio.com</a>
-				<a class="link link-color" href="tel:+11(000)1111111">+11 (000) 111-11-11</a>
-			</address>
+				<nav>
+					<ul class="nav-button">
+						<li><a class="link" href="index.html">Studio</a></li>
+						<li><a class="link" href="portfolio.html">Portfolio</a></li>
+						<li><a class="link" href="index.html">Contact</a></li>
+					</ul>
+				</nav>
+
+				<address>
+					<div class="address-info">
+						<a class="link link-color" href="mailto:info@devstudio.com"
+							>info@devstudio.com</a
+						>
+						<a class="link link-color" href="tel:+11(000)1111111"
+							>+11 (000) 111-11-11</a
+						>
+					</div>
+				</address>
 			</div>
-		</div>
 		</header>
 		<main>
-            <section class="container section">
-                <h1> </h1>
-			<ul class="container menu">
-				<li class="button-item"><button class="button-design" type="button">All</button></li>
-				<li class="button-item"><button class="button-design" type="button">Web Site</button></li>
-				<li class="button-item"><button class="button-design" type="button">App</button></li>
-				<li class="button-item"><button class="button-design" type="button">Design</button></li>
-				<li class="button-item"><button class="button-design" type="button">Marketing</button></li>
-			</ul>
-     
-			<div class="container">
-			<ul class="menu-set">
-				<li>
-					<img
-						src="./images/img-1-1.jpg"
-						alt="screenshots of Banking App Interface Concept"
-						width="360"
-						height="300" />
-						<div class="bottom-frame">
-					<h3 class="project-name">Banking App Interface Concept</h3>
-					<p class="project-type">App</p>
-				</div>
-				</li>
-				<li>
-					<img
-						src="./images/img-2-1.jpg"
-						alt="A phone that scans the QR code"
-						width="360"
-						height="300" />
-						<div class="bottom-frame">
-					<h3 class="project-name">Cashless Payment</h3>
-					<p class="project-type">Marketing</p>
-				</div>
-				</li>
-				
-				<li>
-					<img
-						src="./images/img-3-1.jpg"
-						alt="Meditation app advertising on laptop and phone screen "
-						width="360"
-						height="300" />
-						<div class="bottom-frame">
-					<h3 class="project-name">Meditation App</h3>
-					<p class="project-type">App</p>
-				</div>
-				</li>
+			<section class="container">
+				<h1></h1>
+				<ul class="container menu">
+					<li class="button-item">
+						<button class="filter-button" type="button">All</button>
+					</li>
+					<li class="button-item">
+						<button class="filter-button" type="button">Web Site</button>
+					</li>
+					<li class="button-item">
+						<button class="filter-button" type="button">App</button>
+					</li>
+					<li class="button-item">
+						<button class="filter-button" type="button">Design</button>
+					</li>
+					<li class="button-item">
+						<button class="filter-button" type="button">Marketing</button>
+					</li>
+				</ul>
 
-				<li>
-					<img
-						src="./images/img-4-3.jpg"
-						alt="photo of the interior of the car with the driver"
-						width="360"
-						height="300" />
-						<div class="bottom-frame">
-					<h3 class="project-name">Taxi Service</h3>
-					<p class="project-type">Marketing</p>
-				</div>
-				</li>
+				<div class="container">
+					<ul class="menu-set">
+						<li>
+							<img
+								src="./images/img-1-1.jpg"
+								alt="screenshots of Banking App Interface Concept"
+								width="360"
+								height="300" />
+							<div class="bottom-frame">
+								<h3 class="new-section">Banking App Interface Concept</h3>
+								<p class="description">App</p>
+							</div>
+						</li>
+						<li>
+							<img
+								src="./images/img-2-1.jpg"
+								alt="A phone that scans the QR code"
+								width="360"
+								height="300" />
+							<div class="bottom-frame">
+								<h3 class="new-section">Cashless Payment</h3>
+								<p class="description">Marketing</p>
+							</div>
+						</li>
 
-				<li>
-					<img
-						src="./images/img-5-1.jpg"
-						alt="graphics showing different wallpapers for phone with moon theme"
-						width="360"
-						height="300" />
-						<div class="bottom-frame">
-					<h3 class="project-name">Screen Illustrations</h3>
-					<p class="project-type">Design</p>
-				</div>
-				</li>
+						<li>
+							<img
+								src="./images/img-3-1.jpg"
+								alt="Meditation app advertising on laptop and phone screen "
+								width="360"
+								height="300" />
+							<div class="bottom-frame">
+								<h3 class="new-section">Meditation App</h3>
+								<p class="description">App</p>
+							</div>
+						</li>
 
-				<li>
-					<img
-						src="./images/img-6-1.jpg"
-						alt="girl in orange sweater"
-						width="360"
-						height="300" />
-						<div class="bottom-frame">
-					<h3 class="project-name">Online Courses</h3>
-					<p class="description">Marketing</p>
-				</div>
-				</li>
+						<li>
+							<img
+								src="./images/img-4-3.jpg"
+								alt="photo of the interior of the car with the driver"
+								width="360"
+								height="300" />
+							<div class="bottom-frame">
+								<h3 class="new-section">Taxi Service</h3>
+								<p class="description">Marketing</p>
+							</div>
+						</li>
 
-				<li>
-					<img
-						src="./images/img-7-1.jpg"
-						alt="graphics showing various Instagram Stories Concept"
-						width="360"
-						height="300" />
-						<div class="bottom-frame">
-					<h3 class="project-name">Instagram Stories Concept</h3>
-					<p class="project-type">Design</p>
-				</div>
-				</li>
+						<li>
+							<img
+								src="./images/img-5-1.jpg"
+								alt="graphics showing different wallpapers for phone with moon theme"
+								width="360"
+								height="300" />
+							<div class="bottom-frame">
+								<h3 class="new-section">Screen Illustrations</h3>
+								<p class="description">Design</p>
+							</div>
+						</li>
 
-				<li>
-					<img
-						src="./images/img-8-1.jpg"
-						alt="woman with shopping bag"
-						width="360"
-						height="300" />
-						<div class="bottom-frame">
-					<h3 class="project-name">Organic Food</h3>
-					<p class="project-type">Web Site</p>
-				</div>
-				</li>
+						<li>
+							<img
+								src="./images/img-6-1.jpg"
+								alt="girl in orange sweater"
+								width="360"
+								height="300" />
+							<div class="bottom-frame">
+								<h3 class="new-section">Online Courses</h3>
+								<p class="description">Marketing</p>
+							</div>
+						</li>
 
-				<li>
-					<img
-						src="./images/img-9-1.jpg"
-						alt="barista creating a pattern on coffee "
-						width="360"
-						height="300" />
-						<div class="bottom-frame">
-					<h3 class="project-name">Fresh Coffee</h3>
-					<p class="project-type">Web Site</p>
+						<li>
+							<img
+								src="./images/img-7-1.jpg"
+								alt="graphics showing various Instagram Stories Concept"
+								width="360"
+								height="300" />
+							<div class="bottom-frame">
+								<h3 class="new-section">Instagram Stories Concept</h3>
+								<p class="description">Design</p>
+							</div>
+						</li>
+
+						<li>
+							<img
+								src="./images/img-8-1.jpg"
+								alt="woman with shopping bag"
+								width="360"
+								height="300" />
+							<div class="bottom-frame">
+								<h3 class="new-section">Organic Food</h3>
+								<p class="description">Web Site</p>
+							</div>
+						</li>
+
+						<li>
+							<img
+								src="./images/img-9-1.jpg"
+								alt="barista creating a pattern on coffee "
+								width="360"
+								height="300" />
+							<div class="bottom-frame">
+								<h3 class="new-section">Fresh Coffee</h3>
+								<p class="description">Web Site</p>
+							</div>
+						</li>
+					</ul>
 				</div>
-				</li>
-			</ul>
-		</div>
-        </section>
+			</section>
 		</main>
 		<footer>
-			<div class="background-bottom">
-			<a class="logo-light" href="index.html"
-				><span class="logo-part">WEB</span>STUDIO</a
-			>
-			<p class="address-style">
-				Increase the flow of customers and sales for your business with digital
-				marketing & growth solutions.
-			</p>
-		</div>
+			<div class="footer-background">
+				<a class="logo-footer" href="index.html"
+					><span class="logo">WEB</span>STUDIO</a
+				>
+				<p class="footer-text">
+					Increase the flow of customers and sales for your business with
+					digital marketing & growth solutions.
+				</p>
+			</div>
 		</footer>
 	</body>
 </html>
