--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Webstudio</title>
 		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+			integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
+			crossorigin="anonymous"
+			referrerpolicy="no-referrer" />
 		<link rel="stylesheet" href="./css/styles.css" />
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -20,7 +25,7 @@
 					><span class="logo">WEB</span>STUDIO</a
 				>
 
-				<nav>
+				<nav class="nav-section">
 					<ul class="nav-button">
 						<li><a class="link" href="index.html">Studio</a></li>
 						<li><a class="link" href="portfolio.html">Portfolio</a></li>
@@ -28,7 +33,7 @@
 					</ul>
 				</nav>
 
-				<address>
+				<address class="address-section">
 					<div class="address-info">
 						<a class="link link-color" href="mailto:info@devstudio.com"
 							>info@devstudio.com</a
@@ -42,7 +47,7 @@
 		</header>
 		<main>
 			<section class="main-section">
-				<div class="container-background">
+				<div class="container">
 					<h1 class="main-section-title">
 						Effective Solutions for Your Business
 					</h1>
@@ -87,9 +92,9 @@
 				</div>
 			</section>
 
-			<section class="section">
-				<div class="container">
-					<h2 class="third-section">What Are We Doing</h2>
+			<section class="section doing-list">
+				<div class="container ">
+					<h2 class="third-section doing-list">What Are We Doing</h2>
 					<ul class="third-section-pics">
 						<li>
 							<img
@@ -166,8 +171,8 @@
 			</section>
 		</main>
 
-		<footer>
-			<div class="footer-background">
+		<footer class="footer-background">
+			<div class="container">
 				<a class="logo-footer" href="index.html"
 					><span class="logo">WEB</span>STUDIO</a
 				>
