--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,16 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Webstudio</title>
+		<title>Portfolio</title>
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+			integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
+			crossorigin="anonymous"
+			referrerpolicy="no-referrer" />
+		<link rel="stylesheet" href="./css/styles.css" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link rel="stylesheet" href="./css/styles.css" />
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -20,7 +29,7 @@
 					><span class="logo">WEB</span>STUDIO</a
 				>
 
-				<nav>
+				<nav class="nav-section">
 					<ul class="nav-button">
 						<li><a class="link" href="index.html">Studio</a></li>
 						<li><a class="link" href="portfolio.html">Portfolio</a></li>
@@ -28,7 +37,7 @@
 					</ul>
 				</nav>
 
-				<address>
+				<address class="address-section">
 					<div class="address-info">
 						<a class="link link-color" href="mailto:info@devstudio.com"
 							>info@devstudio.com</a
@@ -173,8 +182,8 @@
 				</div>
 			</section>
 		</main>
-		<footer>
-			<div class="footer-background">
+		<footer class="footer-background">
+			<div class="container">
 				<a class="logo-footer" href="index.html"
 					><span class="logo">WEB</span>STUDIO</a
 				>
