--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 			</section>
 
 			<section class="section doing-list">
-				<div class="container ">
+				<div class="container">
 					<h2 class="third-section doing-list">What Are We Doing</h2>
 					<ul class="third-section-pics">
 						<li>
@@ -132,9 +132,10 @@
 								alt="man in shirt with dark beard"
 								width="264"
 								height="260" />
-
-							<h4 class="team-name">Mark Guerrero</h4>
-							<p class="team-name-description">Product Designer</p>
+							<div class="team">
+								<h3 class="team-name">Mark Guerrero</h3>
+								<p class="team-name-description">Product Designer</p>
+							</div>
 						</li>
 						<li class="item">
 							<img
@@ -143,8 +144,10 @@
 								width="264"
 								height="260" />
 
-							<h4 class="team-name">Tom Ford</h4>
-							<p class="team-name-description">Frontend Developer</p>
+							<div class="team">
+								<h3 class="team-name">Tom Ford</h3>
+								<p class="team-name-description">Frontend Developer</p>
+							</div>
 						</li>
 						<li class="item">
 							<img
@@ -153,8 +156,10 @@
 								width="264"
 								height="260" />
 
-							<h4 class="team-name">Camila Garcia</h4>
-							<p class="team-name-description">Marketing</p>
+							<div class="team">
+								<h3 class="team-name">Camila Garcia</h3>
+								<p class="team-name-description">Marketing</p>
+							</div>
 						</li>
 						<li class="item">
 							<img
@@ -163,8 +168,10 @@
 								width="264"
 								height="260" />
 
-							<h4 class="team-name">Daniel Wilson</h4>
-							<p class="team-name-description">UI Designer</p>
+							<div class="team">
+								<h3 class="team-name">Daniel Wilson</h3>
+								<p class="team-name-description">UI Designer</p>
+							</div>
 						</li>
 					</ul>
 				</div>
