--- a/portfolio.html
+++ b/portfolio.html
@@ -50,26 +50,27 @@
 			</div>
 		</header>
 		<main>
-			<section class="container">
-				<h1></h1>
-				<ul class="container menu">
-					<li class="button-item">
-						<button class="filter-button" type="button">All</button>
-					</li>
-					<li class="button-item">
-						<button class="filter-button" type="button">Web Site</button>
-					</li>
-					<li class="button-item">
-						<button class="filter-button" type="button">App</button>
-					</li>
-					<li class="button-item">
-						<button class="filter-button" type="button">Design</button>
-					</li>
-					<li class="button-item">
-						<button class="filter-button" type="button">Marketing</button>
-					</li>
-				</ul>
-
+			<section class="portfolio-button">
+				<h1 class="visually-hidden">Portfolio</h1>
+				<div class="container">
+					<ul class="menu">
+						<li>
+							<button class="filter-button" type="button">All</button>
+						</li>
+						<li>
+							<button class="filter-button" type="button">Web Site</button>
+						</li>
+						<li>
+							<button class="filter-button" type="button">App</button>
+						</li>
+						<li>
+							<button class="filter-button" type="button">Design</button>
+						</li>
+						<li>
+							<button class="filter-button" type="button">Marketing</button>
+						</li>
+					</ul>
+				</div>
 				<div class="container">
 					<ul class="menu-set">
 						<li>
