--- a/portfolio.html
+++ b/portfolio.html
@@ -51,7 +51,7 @@
 		</header>
 		<main>
 			<div class="container">
-			<section class="portfolio-button">
+			<section class="portfolio-button section">
 				<h1 class="visually-hidden">Portfolio</h1>
 			
 					<ul class="menu">
@@ -71,7 +71,7 @@
 							<button class="filter-button" type="button">Marketing</button>
 						</li>
 					</ul>
-					
+
 					<ul class="menu-set">
 						<li>
 							<img
