--- a/portfolio.html
+++ b/portfolio.html
@@ -51,7 +51,7 @@
 		</header>
 		<main>
 			<div class="container">
-			<section class="portfolio-button section">
+			<section class="portfolio-button section-portfolio">
 				<h1 class="visually-hidden">Portfolio</h1>
 			
 					<ul class="menu">
