--- a/portfolio.html
+++ b/portfolio.html
@@ -51,7 +51,7 @@
 		</header>
 		<main>
 			
-			<section class="portfolio-button section-portfolio">
+			<section class="portfolio-button section">
 				<div class="container">
 				<h1 class="visually-hidden">Portfolio</h1>
 			
