--- a/index.html
+++ b/index.html
@@ -20,18 +20,18 @@
 	</head>
 	<body>
 		<header class="links">
+			<nav class="nav-section">
 			<div class="flex-container container">
 				<a class="logo-second-part" href="index.html"
 					><span class="logo">WEB</span>STUDIO</a
 				>
 
-				<nav class="nav-section">
-					<ul class="nav-button">
+				<menu class="nav-button">
 						<li><a class="link" href="index.html">Studio</a></li>
 						<li><a class="link" href="portfolio.html">Portfolio</a></li>
 						<li><a class="link" href="index.html">Contact</a></li>
-					</ul>
-				</nav>
+					</menu>
+				
 
 				<address class="address-section">
 					<div class="address-info">
@@ -43,6 +43,7 @@
 						>
 					</div>
 				</address>
+			</nav>
 			</div>
 		</header>
 		<main>
