--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
 	</head>
 	<body>
 		<header class="links">
+			<div class="container">
 			<nav class="nav-section">
-			<div class="flex-container container">
+			
 				<a class="logo-second-part" href="index.html"
 					><span class="logo">WEB</span>STUDIO</a
 				>
