--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 					<h2 class="team-member-list">Our Team</h2>
 
 					<ul class="card-set">
-						<li class="item">
+						<li class="item mark">
 							<img
 								src="./images/img.jpg"
 								alt="man in shirt with dark beard"
