--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 				<div class="container ">
 					<h2 class="third-section doing-list">What Are We Doing</h2>
 					<ul class="third-section-pics">
-						<li>
+						<li class="doing-section">
 							<img
 								src="./images/Rectangle-71.jpg"
 								alt="computer screen with chart"
