--- a/index.html
+++ b/index.html
@@ -105,14 +105,14 @@
 								width="360"
 								height="300" />
 						</li>
-						<li>
+						<li class="doing-section">
 							<img
 								src="./images/Rectangle-71-2.jpg"
 								alt="WhatsApp application on the smartphone screen"
 								width="360"
 								height="300" />
 						</li>
-						<li>
+						<li class="doing-section">
 							<img
 								src="./images/Rectangle-71-3.jpg"
 								alt="smartphone held in hand"
@@ -139,7 +139,7 @@
 								<p class="team-name-description">Product Designer</p>
 							</div>
 						</li>
-						<li class="item">
+						<li class="item mark">
 							<img
 								src="./images/img-5.jpg"
 								alt="smiling young man in blue shirt"
@@ -151,7 +151,7 @@
 								<p class="team-name-description">Frontend Developer</p>
 							</div>
 						</li>
-						<li class="item">
+						<li class="item mark">
 							<img
 								src="./images/img-3.jpg"
 								alt="woman in pink sweater"
@@ -163,7 +163,7 @@
 								<p class="team-name-description">Marketing</p>
 							</div>
 						</li>
-						<li class="item">
+						<li class="item mark">
 							<img
 								src="./images/img-4.jpg"
 								alt="man in gray T-shirt "
