--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 
 			<section class="section">
 				<div class="container">
+					<h2 class="visually-hidden">Second Section</h2>
 					<ul class="card-set">
 						<li class="item">
 							<h3 class="title-style">Strategy</h3>
