--- a/portfolio.html
+++ b/portfolio.html
@@ -50,7 +50,7 @@
 			</div>
 		</header>
 		<main>
-			<section class="portfolio-button section">
+			<section class="portfolio-button portfolio-container">
 				<div class="container">
 				<h1 class="visually-hidden">Portfolio</h1>
 			
