--- a/portfolio.html
+++ b/portfolio.html
@@ -73,7 +73,7 @@
 					</ul>
 
 					<ul class="menu-set">
-						<li>
+						<li class="project-image-caption">
 							<img
 								src="./images/img-1-1.jpg"
 								alt="screenshots of Banking App Interface Concept"
@@ -84,7 +84,7 @@
 								<p class="description">App</p>
 							</div>
 						</li>
-						<li>
+						<li class="project-image-caption">
 							<img
 								src="./images/img-2-1.jpg"
 								alt="A phone that scans the QR code"
@@ -96,7 +96,7 @@
 							</div>
 						</li>
 
-						<li>
+						<li class="project-image-caption">
 							<img
 								src="./images/img-3-1.jpg"
 								alt="Meditation app advertising on laptop and phone screen "
@@ -108,7 +108,7 @@
 							</div>
 						</li>
 
-						<li>
+						<li class="project-image-caption">
 							<img
 								src="./images/img-4-3.jpg"
 								alt="photo of the interior of the car with the driver"
@@ -118,9 +118,9 @@
 								<h3 class="new-section">Taxi Service</h3>
 								<p class="description">Marketing</p>
 							</div>
-						</li>
+						</li class="project-image-caption">
 
-						<li>
+						<li class="project-image-caption">
 							<img
 								src="./images/img-5-1.jpg"
 								alt="graphics showing different wallpapers for phone with moon theme"
@@ -132,7 +132,7 @@
 							</div>
 						</li>
 
-						<li>
+						<li class="project-image-caption">
 							<img
 								src="./images/img-6-1.jpg"
 								alt="girl in orange sweater"
@@ -144,7 +144,7 @@
 							</div>
 						</li>
 
-						<li>
+						<li class="project-image-caption">
 							<img
 								src="./images/img-7-1.jpg"
 								alt="graphics showing various Instagram Stories Concept"
@@ -156,7 +156,7 @@
 							</div>
 						</li>
 
-						<li>
+						<li class="project-image-caption">
 							<img
 								src="./images/img-8-1.jpg"
 								alt="woman with shopping bag"
@@ -168,7 +168,7 @@
 							</div>
 						</li>
 
-						<li>
+						<li class="project-image-caption">
 							<img
 								src="./images/img-9-1.jpg"
 								alt="barista creating a pattern on coffee "
