--- a/portfolio.html
+++ b/portfolio.html
@@ -92,10 +92,13 @@
 								alt="A phone that scans the QR code"
 								width="360"
 								height="300" />
+								<a href="portfolio.html">
 							<div class="bottom-frame">
 								<h3 class="new-section">Cashless Payment</h3>
 								<p class="description">Marketing</p>
+								
 							</div>
+						</a>
 						</li>
 
 						<li class="project-image-caption">
