--- a/index.html
+++ b/index.html
@@ -20,29 +20,29 @@
 	</head>
 	<body>
 		<header class="links">
-			<div class="container">
-				<nav class="nav-section">
-					<a class="logo-second-part" href="index.html"
-						><span class="logo">WEB</span>STUDIO</a
-					>
+			<div class="flex-container container">
+				<a class="logo-second-part" href="index.html"
+					><span class="logo">WEB</span>STUDIO</a
+				>
 
-					<menu class="nav-button">
+				<nav class="nav-section">
+					<ul class="nav-button">
 						<li><a class="link" href="index.html">Studio</a></li>
 						<li><a class="link" href="portfolio.html">Portfolio</a></li>
 						<li><a class="link" href="index.html">Contact</a></li>
-					</menu>
-
-					<address class="address-section">
-						<div class="address-info">
-							<a class="link link-color" href="mailto:info@devstudio.com"
-								>info@devstudio.com</a
-							>
-							<a class="link link-color" href="tel:+11(000)1111111"
-								>+11 (000) 111-11-11</a
-							>
-						</div>
-					</address>
+					</ul>
 				</nav>
+
+				<address class="address-section">
+					<div class="address-info">
+						<a class="link link-color" href="mailto:info@devstudio.com"
+							>info@devstudio.com</a
+						>
+						<a class="link link-color" href="tel:+11(000)1111111"
+							>+11 (000) 111-11-11</a
+						>
+					</div>
+				</address>
 			</div>
 		</header>
 		<main>
