mentor update adrdress

--- a/index.html
+++ b/index.html
@@ -34,13 +34,17 @@
 				</nav>
 
 				<address class="address-section">
-					<div class="address-info">
-						<a class="link link-color" href="mailto:info@devstudio.com"
-							>info@devstudio.com</a
-						>
-						<a class="link link-color" href="tel:+11(000)1111111"
-							>+11 (000) 111-11-11</a
-						>
+					<div >
+						<ul class="address-info">
+							<li><a class="link link-color" href="tel:+11(000)1111111"
+								>+11 (000) 111-11-11</a
+							></li>
+							<li><a class="link link-color" href="mailto:info@devstudio.com"
+								>info@devstudio.com</a
+							></li>
+						</ul>
+						
+						
 					</div>
 				</address>
 			</div>
