--- a/index.html
+++ b/index.html
@@ -34,18 +34,18 @@
 				</nav>
 
 				<address class="address-section">
-					<div >
-						<ul class="address-info">
-							<li><a class="link link-color" href="tel:+11(000)1111111"
+					<ul class="address-info">
+						<li>
+							<a class="link link-color" href="tel:+11(000)1111111"
 								>+11 (000) 111-11-11</a
-							></li>
-							<li><a class="link link-color" href="mailto:info@devstudio.com"
+							>
+						</li>
+						<li>
+							<a class="link link-color" href="mailto:info@devstudio.com"
 								>info@devstudio.com</a
-							></li>
-						</ul>
-						
-						
-					</div>
+							>
+						</li>
+					</ul>
 				</address>
 			</div>
 		</header>
